--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8" author="Daniel">
+        <title>Probando Github Pages</title>
+    </head>
+    <body>
+        <header><h1>Direccionando a unos sitios web</h1></header>
+        <section>
+            <nav>
+                <ul>
+                    <li ><a href="Centroamerica.html"></a></li>
+                    <li ><a href="estructura_basica.html"></a></li>
+                    <li><a href="etiquetas_texto.html"></a></li>
+                </ul>
+            </nav>
+        </section>
+    </body>
+</html>
