--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <section>
             <nav>
                 <ul>
-                    <li ><a href="Centroamerica.html"></a>Centroamerica</li>
-                    <li ><a href="estructura_basica.html"></a>estructuras básicas html</li>
-                    <li><a href="etiquetas_texto.html"></a>Etiquetas de texto html</li>
+                    <li ><a href="Centroamerica.html">Centroamerica</a></li>
+                    <li ><a href="estructura_basica.html">Estructuras básicas html</a></li>
+                    <li><a href="etiquetas_texto.html">Etiquetas de texto html</a></li>
                 </ul>
             </nav>
         </section>
